# BackupCore

./: .clang-format  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  REPOSITORY.md  RESTORE.md  ROADMAP.md  THREADING.md  config.json
.github/workflows/: build.yml
src/: CMakeLists.txt  main.cpp
src/chunker/: CMakeLists.txt  chunker.cpp  chunker.h
src/cli/: CMakeLists.txt  cli.cpp  cli.h
src/common/: CMakeLists.txt  config.cpp  config.h  result.h  types.h
src/engine/: CMakeLists.txt  backup_engine.cpp  backup_engine.h  restore_engine.cpp  restore_engine.h
src/hasher/: CMakeLists.txt  hasher.cpp  hasher.h
src/manifest/: CMakeLists.txt  manifest.cpp  manifest.h
src/repository/: CMakeLists.txt  repository.cpp  repository.h
src/scanner/: CMakeLists.txt  scanner.cpp  scanner.h
src/thread_pool/: CMakeLists.txt  thread_pool.cpp  thread_pool.h
tests/: CMakeLists.txt  test_chunker.cpp  test_hasher.cpp  test_manifest.cpp  test_repository.cpp  test_restore.cpp  test_scanner.cpp  test_thread_pool.cpp
